# CnC_Renegade

./: .gitignore  Cargo.toml  README.md  meson.build
Code/BandTest/: BandTest.cpp  BandTest.h  meson.build
Code/BinkMovie/: meson.build  subtitleparser.cpp
Code/Combat/: WeatherMgr.h  action.cpp  assetdep.cpp  building.cpp  combatsound.cpp  cover.cpp  debug.cpp  debug.h  directinput.cpp  directinput.h  hud.cpp  input.cpp  input.h  mendozabossgameobj.cpp  meson.build  persistentgameobjobserver.cpp  raveshawbossgameobj.cpp  sakurabossgameobj.cpp  savegame.cpp  scriptcommands.cpp  scriptcommands.h  soldier.cpp  spawn.cpp  statemachine.h  vehicle.cpp  viseme.cpp  weaponbag.cpp  weapons.cpp
Code/Commando/: CDKeyAuth.cpp  DlgMPTeamSelect.cpp  DlgWOLAutoStart.cpp  DlgWOLAutoStart.h  DlgWebPage.cpp  GameSpyBanList.cpp  GameSpy_QnR.cpp  WINMAIN.CPP  WebBrowser.cpp  bandwidth.cpp  bandwidth.h  bandwidthcheck.cpp  bandwidthcheck.h  chat.rc  combatgmode.cpp  dialogresource.h  dlgcncbattleinfo.cpp  dlgcncpurchasemainmenu.cpp  dlgcncserverinfo.cpp  dlgcncteaminfo.cpp  dlgcontrolslisttab.cpp  dlgcontrolslisttab.h  dlghelpscreen.cpp  dlginternetoptions.cpp  dlgmainmenu.cpp  dlgmplanhostoptions.cpp  dlgserversaveload.cpp  gamedata.cpp  gamedata.h  gamemode.cpp  gamesideservercontrol.cpp  gamesideservercontrol.h  init.cpp  meson.build  nat.h  natsock.cpp  natter.cpp  netinterface.cpp  netinterface.h  radiocommanddisplay.cpp  (+7 more)
Code/Launcher/: Protect.cpp
Code/SControl/: meson.build  servercontrol.h
Code/Scripts/: DLLmain.cpp  meson.build  scriptcommands.h
Code/Tools/wlib/: ustring.h
Code/WOLBrowser/: meson.build
Code/WWAudio/: AudibleSound.cpp  AudibleSound.h  AudioEvents.h  FilteredSound.cpp  FilteredSound.h  Listener.cpp  Sound3D.cpp  Sound3D.h  SoundBuffer.cpp  SoundBuffer.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  Utils.cpp  Utils.h  WWAudio.cpp  WWAudio.h  meson.build  sound2dhandle.cpp  soundhandle.cpp  soundhandle.h
Code/WWMath/: curve.cpp  meson.build
Code/WWOnline/: GameResField.cpp  GameResField.h  GameResPacket.cpp  GameResPacket.h  WOLNetUtilObserver.cpp  WOLSession.cpp  meson.build
Code/wolapi/: WOLAPI.h  meson.build
Code/ww3d2/: animatedsoundmgr.cpp  assetmgr.cpp  dazzle.cpp  dx8fvf.cpp  dx8renderer.cpp  dx8renderer.h  dx8wrapper.cpp  dx8wrapper.h  font3d.cpp  hanim.cpp  hmorphanim.cpp  lightenvironment.cpp  mapper.cpp  meshmdl.cpp  meson.build  pointgr.cpp  prim_anim.h  render2dsentence.cpp  render2dsentence.h  rendobj.cpp  rendobj.h  sortingrenderer.cpp  stripoptimizer.cpp  vertmaterial.h  w3d_dep.h  ww3d.cpp  ww3d.h  ww3dformat.cpp
Code/wwbitpack/: bitstream.cpp  bitstream.h  meson.build
Code/wwdebug/: meson.build  wwdebug.cpp  wwdebug.h  wwprofile.cpp
Code/wwlib/: Except.cpp  FastAllocator.h  Notify.h  argv.cpp  cpudetect.cpp  ini.cpp  meson.build  mixfile.cpp  msgloop.cpp  mutex.h  random.cpp  vector.h
Code/wwnet/: connect.cpp  meson.build
Code/wwphys/: Path.cpp  camerashakesystem.h  meson.build  phys3.cpp
Code/wwsaveload/: definitionmgr.cpp  meson.build
Code/wwtranslatedb/: meson.build  translatedb.cpp
Code/wwui/: IMEManager.cpp  buttonctrl.cpp  controladvisesink.h  dialogbase.cpp  dialogbutton.cpp  dialogmgr.h  inputctrl.cpp  inputctrl.h  menuentryctrl.cpp  menuentryctrl.h  meson.build  screencursor.cpp  shortcutbarctrl.cpp  shortcutbarctrl.h  wwuiinput.h
Code/wwutil/: meson.build  miscutil.cpp
Crates/: audio_crate.hpp  cargo_build.rs  meson.build  render_crate.hpp
Crates/Audio/: Cargo.toml
Crates/Audio/examples/: play.rs
Crates/Audio/src/: bindings.rs  imp.rs  lib.rs
Crates/Audio/src/bindings/: data_static.rs  file.rs  output.rs  stream.rs
Crates/Audio/src/imp/: buffer.rs  mixer.rs  output.rs  resampler.rs  source.rs
Crates/Audio/src/imp/source/: resample.rs
Crates/MixDump/: Cargo.toml
Crates/MixDump/src/: main.rs
Crates/Render/: Cargo.toml  render_crate.h
Crates/Render/src/: bind_group.rs  buffer.rs  commands.rs  device.rs  images.rs  instance.rs  lib.rs  pipeline.rs  shader_module.rs  surface.rs  texture.rs
Crates/mix/: Cargo.toml
Crates/mix/examples/: dump.rs
Crates/mix/src/: lib.rs
Docs/: Audio.md  Dialogs.md  Rendering.md
MockedSdks/Bink/: Bink.cpp  Bink.h  meson.build
MockedSdks/D3D8/: D3dx8tex.h  d3d8.cpp  d3d8.h  d3d8caps.h  d3d8types.h  d3dx8.h  d3dx8core.cpp  d3dx8core.h  d3dx8math.cpp  d3dx8math.h  meson.build
MockedSdks/GameSpy/: GameSpy.cpp  meson.build
MockedSdks/GameSpy/GameSpy/: gcdkeyserver.h  ghttp.h  gqueryreporting.h  gtypes.h
MockedSdks/Miles/: Mss.cpp  Mss.h  meson.build
Run/: shader.wgsl
