combat = static_library(
    'combat',
    'action.cpp',
    'activeconversation.cpp',
    'airstripgameobj.cpp',
    'animcontrol.cpp',
    'armedgameobj.cpp',
    'assetdep.cpp',
    'assets.cpp',
    'backgroundmgr.cpp',
    'basecontroller.cpp',
    'basegameobj.cpp',
    'beacongameobj.cpp',
    'bones.cpp',
    'building.cpp',
    'buildingaggregate.cpp',
    'buildingmonitor.cpp',
    'buildingstate.cpp',
    'bullet.cpp',
    'c4.cpp',
    'ccamera.cpp',
    'characterclasssettings.cpp',
    'cheatmgr.cpp',
    'cinematicgameobj.cpp',
    'clientcontrol.cpp',
    'CNCModeSettings.cpp',
    'colors.cpp',
    'combat.cpp',
    'combatdazzle.cpp',
    'combatmaterialeffectmanager.cpp',
    'combatsaveload.cpp',
    'combatsound.cpp',
    'comcentergameobj.cpp',
    'control.cpp',
    'conversation.cpp',
    'conversationmgr.cpp',
    'conversationremark.cpp',
    'cover.cpp',
    'crandom.cpp',
    'csdamageevent.cpp',
    'damage.cpp',
    'damageablegameobj.cpp',
    'damageablestaticphys.cpp',
    'damagezone.cpp',
    'debug.cpp',
    'diaglog.cpp',
    'dialogue.cpp',
    'doors.cpp',
    'dynamicspeechanim.cpp',
    'effectrecycler.cpp',
    'elevator.cpp',
    'encyclopediamgr.cpp',
    'evasettings.cpp',
    'explosion.cpp',
    'ffactorylist.cpp',
    'gameobjmanager.cpp',
    'gameobjobserver.cpp',
    'gametype.cpp',
    'globalsettings.cpp',
    'harvester.cpp',
    'hud.cpp',
    'hudinfo.cpp',
    'humanrecoil.cpp',
    'humanstate.cpp',
    'input.cpp',
    'inventory.cpp',
    'mapmgr.cpp',
    'mendozabossgameobj.cpp',
    'messagewindow.cpp',
    'muzzlerecoil.cpp',
    'objectives.cpp',
    'objectivesviewer.cpp',
    'objlibrary.cpp',
    'orator.cpp',
    'oratortypes.cpp',
    'pathaction.cpp',
    'persistentgameobjobserver.cpp',
    'physicalgameobj.cpp',
    'pilot.cpp',
    'playerdata.cpp',
    'playerterminal.cpp',
    'playertype.cpp',
    'powerplantgameobj.cpp',
    'powerup.cpp',
    'purchasesettings.cpp',
    'radar.cpp',
    'raveshawbossgameobj.cpp',
    'refinerygameobj.cpp',
    'reflist.cpp',
    'repairbaygameobj.cpp',
    'sakurabossgameobj.cpp',
    'samsite.cpp',
    'savegame.cpp',
    'scexplosionevent.cpp',
    'scobeliskevent.cpp',
    'screenfademanager.cpp',
    'scriptablegameobj.cpp',
    'scriptcommands.cpp',
    'scripts.cpp',
    'scriptzone.cpp',
    'simplegameobj.cpp',
    'smartgameobj.cpp',
    'sniper.cpp',
    'soldier.cpp',
    'soldierfactorygameobj.cpp',
    'soldierobserver.cpp',
    'SoundEnvironment.cpp',
    'spawn.cpp',
    'specialeffectsgameobj.cpp',
    'statemachine.cpp',
    'staticnetworkobject.cpp',
    'surfaceeffects.cpp',
    'systeminfolog.cpp',
    'teampurchasesettings.cpp',
    'textwindow.cpp',
    'timemgr.cpp',
    'transition.cpp',
    'transitiongameobj.cpp',
    'unitcoordinationzonemgr.cpp',
    'vehicle.cpp',
    'vehicledriver.cpp',
    'vehiclefactorygameobj.cpp',
    'viseme.cpp',
    'warfactorygameobj.cpp',
    'weaponbag.cpp',
    'weaponmanager.cpp',
    'weapons.cpp',
    'weaponview.cpp',
    'WeatherMgr.cpp',
    dependencies : [
        wwlib_dep,
        wwdebug_dep,
        wwmath_dep,
        wwsaveload_dep,
        wwnet_dep,
        ww3d2_dep,
        wwui_dep,
        wwaudio_dep,
        wwphys_dep,
        wwtranslatedb_dep,
        scripts_dep,
    ],
)
combat_dep = declare_dependency(
    link_with : combat,
    include_directories : include_directories('.'),
    link_args : ['-ldxguid', '-ldinput8'],
    dependencies : [
        wwsaveload_dep,
    ],
)
