windows = import('windows')

commando = executable(
    'commando',
    'AnnounceEvent.cpp',
    'apppacketstats.cpp',
    'AutoStart.cpp',
    'bandwidth.cpp',
    'bandwidthcheck.cpp',
    'bandwidthgraph.cpp',
    'bioevent.cpp',
    'buildnum.cpp',
    'campaign.cpp',
    'CDKeyAuth.cpp',
    'cdverify.cpp',
    'changeteamevent.cpp',
    'chatshre.cpp',
    'clientbboevent.cpp',
    'clientfps.cpp',
    'clientgoodbyeevent.cpp',
    'clienthintmanager.cpp',
    'clientpingmanager.cpp',
    'cnetwork.cpp',
    'combatgmode.cpp',
    'cominit.cpp',
    'commandosaveload.cpp',
    'comnetrcvinst.cpp',
    'console.cpp',
    'consolecommandevent.cpp',
    'consolefunction.cpp',
    'ConsoleMode.cpp',
    'csconsolecommandevent.cpp',
    'cshint.cpp',
    'cspingrequestevent.cpp',
    'cstextobj.cpp',
    'datasafe.cpp',
    'devoptions.cpp',
    'diagnostics.cpp',
    'dialogtests.cpp',
    'dlgcharacteroptions.cpp',
    'dlgcheatoptions.cpp',
    'dlgcncbattleinfo.cpp',
    'dlgcncpurchasemainmenu.cpp',
    'dlgcncpurchasemenu.cpp',
    'dlgcncreference.cpp',
    'dlgcncserverinfo.cpp',
    'dlgcncteaminfo.cpp',
    'dlgcncwinscreen.cpp',
    'dlgconfigaudiotab.cpp',
    'dlgconfigperformancetab.cpp',
    'dlgconfigvideotab.cpp',
    'dlgcontrols.cpp',
    'dlgcontrolsaveload.cpp',
    'dlgcontrolslisttab.cpp',
    'dlgcontroltabs.cpp',
    'dlgcredits.cpp',
    'DlgDownload.cpp',
    'dlgevabuildingstab.cpp',
    'dlgevacharacterstab.cpp',
    'dlgevadatatab.cpp',
    'dlgevaencyclopedia.cpp',
    'dlgevamaptab.cpp',
    'dlgevaobjectivestab.cpp',
    'dlgevavehiclestab.cpp',
    'dlgevaviewertab.cpp',
    'dlgevaweaponstab.cpp',
    'dlghelpscreen.cpp',
    'dlginternetoptions.cpp',
    'dlgloadspgame.cpp',
    'dlgmainmenu.cpp',
    'DlgMessageBox.cpp',
    'dlgmovieoptions.cpp',
    'dlgmpchangelannickname.cpp',
    'DlgMPConnect.cpp',
    'DlgMPConnectionRefused.cpp',
    'dlgmpingamechat.cpp',
    'dlgmpingameteamchat.cpp',
    'dlgmplangamelist.cpp',
    'dlgmplanhostoptions.cpp',
    'dlgmpslaveservers.cpp',
    'DlgMPTeamSelect.cpp',
    'dlgmpwoladdbuddy.cpp',
    'dlgmpwoladdignoreentry.cpp',
    'dlgmpwolautologinprompt.cpp',
    'dlgmpwolbuddies.cpp',
    'dlgmpwolbuddylistpopup.cpp',
    'dlgmpwolchat.cpp',
    'dlgmpwoldeletebuddy.cpp',
    'dlgmpwoldeleteignoreentry.cpp',
    'dlgmpwolgamelist.cpp',
    'dlgmpwolgoodies.cpp',
    'dlgmpwolhostchatlobby.cpp',
    'dlgmpwolignorelist.cpp',
    'dlgmpwolinvitation.cpp',
    'dlgmpwollocalenag.cpp',
    'dlgmpwolmain.cpp',
    'dlgmpwolmotd.cpp',
    'dlgmpwolpagebuddy.cpp',
    'dlgmpwolpagereply.cpp',
    #'dlgmpwolquickmatch.cpp',
    'dlgmpwolquickmatchoptions.cpp',
    'dlgmultiplayoptions.cpp',
    'DlgPasswordPrompt.cpp',
    'dlgpreviewoptions.cpp',
    'DlgQuickmatch.cpp',
    'DlgRestart.cpp',
    'dlgsavegame.cpp',
    'dlgserversaveload.cpp',
    'dlgsidebarhelp.cpp',
    'dlgtechoptions.cpp',
    'DlgWebPage.cpp',
    'DlgWOLAutoStart.cpp',
    'DlgWOLLogon.cpp',
    'DlgWOLSettings.cpp',
    'DlgWOLWait.cpp',
    'donateevent.cpp',
    'evictionevent.cpp',
    'FirewallWait.cpp',
    'floodprotectionmgr.cpp',
    'gamechanlist.cpp',
    'gamechannel.cpp',
    'gamedata.cpp',
    'gamedataupdateevent.cpp',
    'gameinitmgr.cpp',
    'gamemenu.cpp',
    'gamemode.cpp',
    'gameoptionsevent.cpp',
    'GameResSend.cpp',
    'gamesideservercontrol.cpp',
    'GameSpy_QnR.cpp',
    'gamespyadmin.cpp',
    'gamespyauthmgr.cpp',
    'GameSpyBanList.cpp',
    'gamespycschallengeresponseevent.cpp',
    'gamespyscchallengeevent.cpp',
    'gdcnc.cpp',
    'gdsingleplayer.cpp',
    'gdskirmish.cpp',
    'god.cpp',
    'godmodeevent.cpp',
    'init.cpp',
    'inputconfig.cpp',
    'inputconfigmgr.cpp',
    'lanchat.cpp',
    'langmode.cpp',
    'level.cpp',
    'loadingevent.cpp',
    'mainloop.cpp',
    'mainmenutransition.cpp',
    'messages.cpp',
    'modpackage.cpp',
    'modpackagemgr.cpp',
    'moneyevent.cpp',
    'movie.cpp',
    'mpsettingsmgr.cpp',
    'multihud.cpp',
    'NAT.cpp',
    'nataddr.cpp',
    'natsock.cpp',
    'natter.cpp',
    'netevent.cpp',
    'netgraphs.cpp',
    'nethandler.cpp',
    'netinterface.cpp',
    'nicenum.cpp',
    'overlay.cpp',
    'pkthandlers.cpp',
    'player.cpp',
    'playerkill.cpp',
    'playermanager.cpp',
    'priority.cpp',
    'purchaserequestevent.cpp',
    'purchaseresponseevent.cpp',
    'radiocommanddisplay.cpp',
    'regbool.cpp',
    'regfloat.cpp',
    'regint.cpp',
    'regstring.cpp',
    'renegadecheatmgr.cpp',
    'renegadedialogmgr.cpp',
    'renegadeplayerterminal.cpp',
    'requestkillevent.cpp',
    'sbbomanager.cpp',
    'scoreevent.cpp',
    'scorescreen.cpp',
    'scpingresponseevent.cpp',
    'sctextobj.cpp',
    'serverfps.cpp',
    'ServerSettings.cpp',
    'shutdown.cpp',
    'singletoninstancekeeper.cpp',
    'skinpackage.cpp',
    'skinpackagemgr.cpp',
    'slavemaster.cpp',
    'suicideevent.cpp',
    'svrgoodbyeevent.cpp',
    'systemsettings.cpp',
    'team.cpp',
    'teammanager.cpp',
    'textdisplay.cpp',
    'useroptions.cpp',
    'vendor.cpp',
    'vipmodeevent.cpp',
    'warpevent.cpp',
    'WebBrowser.cpp',
    'winevent.cpp',
    'WINMAIN.CPP',
    'WOLBuddyMgr.cpp',
    'WOLChatMgr.cpp',
    'WOLDiags.cpp',
    'WOLGameInfo.cpp',
    'wolgmode.cpp',
    'WOLJoinGame.cpp',
    'wollocalemgr.cpp',
    'WOLLoginProfile.cpp',
    'WOLLogonMgr.cpp',
    'WOLQuickMatch.cpp',
    windows.compile_resources('chat.rc'),

    install : true,
    install_dir : run_dir,

    # dunno why it uses <WWUI\PopupDialog.h> etc.
    include_directories : include_directories('..', is_system : true),

    dependencies : [
        sdk_gamespy_dep,

        bandtest_dep,
        binkmovie_dep,

        wwlib_dep,
        wwaudio_dep,
        ww3d2_dep,
        wwutil_dep,
        wwui_dep,
        wwsaveload_dep,
        wwtranslatedb_dep,
        wwnet_dep,
        wwphys_dep,
        wwonline_dep,
        wolbrowser_dep,

        scripts_dep.partial_dependency(), # only ensure it's built
        scontrol_dep,
        combat_dep,
    ],

    link_args : ['-lwinmm', '-lversion', '-lWs2_32'],

    win_subsystem : 'windows',
)
