scripts_name = 'scripts'
if get_option('debug')
  scripts_name += 'd'
endif
scripts = shared_library(
    scripts_name,
    # A *bunch* of these aren't listed in Scripts.dsp, and no longer build. Interesting!
    #'Common.cpp',
    'DLLmain.cpp',
    'DPrint.cpp',
    'DrMobius.cpp',
    #'Group.cpp',
    #'GroupControl.cpp',
    #'GroupScript.cpp',
    'Mission00.cpp',
    'Mission01.cpp',
    'Mission02.cpp',
    'Mission03.cpp',
    'Mission04.cpp',
    'Mission05.cpp',
    'Mission06.cpp',
    'Mission07.cpp',
    'mission08.cpp',
    'Mission09.cpp',
    'Mission10.cpp',
    'Mission11.cpp',
    'MissionDemo.cpp',
    #'MissionS04.cpp',
    'MissionX0.cpp',
    #'PRDemo.cpp',
    'ScriptFactory.cpp',
    'ScriptRegistrar.cpp',
    'scripts.cpp',
    'strtrim.cpp',
    'Test_BMG.cpp',
    'Test_Cinematic.cpp',
    'Test_DAK.cpp',
    'Test_DAY.cpp',
    #'Test_DEL.cpp',
    #'Test_DLS_M03.cpp',
    'Test_DLS.cpp',
    'Test_DME.cpp',
    'Test_GTH.cpp',
    'Test_JDG_EVA.cpp',
    'Test_PDS.cpp',
    'Test_RAD.cpp',
    'Test_RMV_Toolkit.cpp',
    'Test_RMV.cpp',
    'Toolkit_Actions.cpp',
    'Toolkit_Animations.cpp',
    'Toolkit_Broadcaster.cpp',
    'Toolkit_Explosions.cpp',
    'Toolkit_Objectives.cpp',
    'Toolkit_Objects.cpp',
    'Toolkit_Powerup.cpp',
    'Toolkit_Siege.cpp',
    'Toolkit_Sounds.cpp',
    'Toolkit_Spawners.cpp',
    'Toolkit_Triggers.cpp',
    'Toolkit.cpp',
    #'unitcombat.cpp',
    dependencies : wwlib_dep,
    cpp_args : '-DBUILDING_DLL',
    install : true,
)

scripts_dep = declare_dependency(
    include_directories : include_directories('.'),
)
