wwmath = static_library(
    'wwmath',
    'aabox.cpp',
    'aabtreecull.cpp',
    'cardinalspline.cpp',
    'catmullromspline.cpp',
    'colmath.cpp',
    'colmathaabox.cpp',
    'colmathaabtri.cpp',
    'colmathfrustum.cpp',
    'colmathline.cpp',
    'colmathobbobb.cpp',
    'colmathobbox.cpp',
    'colmathobbtri.cpp',
    'colmathplane.cpp',
    'colmathsphere.cpp',
    'cullsys.cpp',
    'curve.cpp',
    'euler.cpp',
    'frustum.cpp',
    'gridcull.cpp',
    'hermitespline.cpp',
    'lineseg.cpp',
    'lookuptable.cpp',
    'matrix3.cpp',
    'matrix3d.cpp',
    'matrix4.cpp',
    'obbox.cpp',
    'ode.cpp',
    'pot.cpp',
    'quat.cpp',
    'tcbspline.cpp',
    'tri.cpp',
    'v3_rnd.cpp',
    'vehiclecurve.cpp',
    'vp.cpp',
    'wwmath.cpp',
    include_directories : include_directories('.', '../wwsaveload'),
    dependencies : [
        wwlib_dep,
        wwdebug_dep,
        #wwsaveload_dep,
    ],
)
wwmath_dep = declare_dependency(
    dependencies : [wwlib_dep],
    link_with : wwmath,
    include_directories : include_directories('.'),
)
