wwphys = static_library(
    'wwphys',
    'accessiblephys.cpp',
    'animcollisionmanager.cpp',
    'bin_aabox.cpp',
    'bin_axes.cpp',
    'bin_obbox.cpp',
    'bin_point.cpp',
    'bin_vector.cpp',
    'bpt.cpp',
    'camerashakesystem.cpp',
    'decophys.cpp',
    'dynamicaabtreecull.cpp',
    'dynamicanimphys.cpp',
    'dynamicphys.cpp',
    'dynamicshadowmanager.cpp',
    'dyntexproject.cpp',
    'floodfillbox.cpp',
    'floodfillgrid.cpp',
    'grideffect.cpp',
    'heightdb.cpp',
    'humanphys.cpp',
    'lightcull.cpp',
    'lightphys.cpp',
    'lightsolve.cpp',
    'lightsolvecontext.cpp',
    'materialeffect.cpp',
    'motorcycle.cpp',
    'motorvehicle.cpp',
    'movephys.cpp',
    'octbox.cpp',
    'Path.cpp',
    'PathDebugPlotter.cpp',
    'Pathfind.cpp',
    'pathfindbox.cpp',
    'PathfindPortal.cpp',
    'PathfindSector.cpp',
    #'PathfindSectorBuilder.cpp',
    'pathmgr.cpp',
    'pathnode.cpp',
    'PathObject.cpp',
    'pathsolve.cpp',
    'phys.cpp',
    'phys3.cpp',
    'physaabtreecull.cpp',
    'physcon.cpp',
    'physcontrol.cpp',
    'physdecalsys.cpp',
    'physdynamicsavesystem.cpp',
    'physgridcull.cpp',
    'physresourcemgr.cpp',
    'physstaticsavesystem.cpp',
    'phystexproject.cpp',
    'progcall.cpp',
    'projectile.cpp',
    'projectormanager.cpp',
    'pscene_collision.cpp',
    'pscene_decal.cpp',
    'pscene_lighting.cpp',
    'pscene_projectors.cpp',
    'pscene_saveload.cpp',
    'pscene_vis.cpp',
    'pscene.cpp',
    'rbody_obsolete.cpp',
    'rbody.cpp',
    'renderobjphys.cpp',
    'renegadeterrainmaterialpass.cpp',
    'renegadeterrainpatch.cpp',
    'ridermanager.cpp',
    'shakeablestaticphys.cpp',
    'staticaabtreecull.cpp',
    'staticanimphys.cpp',
    'staticphys.cpp',
    'stealtheffect.cpp',
    'terrainmaterial.cpp',
    'timeddecophys.cpp',
    'trackedvehicle.cpp',
    'transitioneffect.cpp',
    'umbrasupport.cpp',
    'vehicledazzle.cpp',
    'vehiclephys.cpp',
    'visoptimizationcontext.cpp',
    'visoptprogress.cpp',
    'visrendercontext.cpp',
    'vissample.cpp',
    'vissectorstats.cpp',
    'vistable.cpp',
    'vistablemgr.cpp',
    'vtolvehicle.cpp',
    'waypath.cpp',
    'waypoint.cpp',
    'wheel.cpp',
    'wheelvehicle.cpp',
    'widgets.cpp',
    'widgetuser.cpp',
    'wwphys.cpp',

    dependencies : [
        wwlib_dep,
        wwmath_dep,
        wwbitpack_dep,
        ww3d2_dep,
    ],
)

wwphys_dep = declare_dependency(
    link_with : wwphys,
    include_directories : include_directories('.'),
)