# Only for editor support, meson does it's own thing
[package]
name = "render"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
image = "0.25.5"
pollster = "0.4.0"
wgpu = "24.0.1"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_UI_WindowsAndMessaging"]
